<resources>
    <string name="app_name" translatable="false">Pulze</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip">Skip</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>

    <string name="settings_streaming_header">Streaming Settings</string>
    <string name="settings_override_kbps">Override Music Quality</string>
    <string name="settings_kbps_target">Target Music Quality</string>

    <string name="music_timeremaining_placeholder">%1$s | %2$s</string>
    <string name="music_artist_placeholder">By: %1$s</string>

    <string name="savefile_name">.appdata</string>
    <string name="app_version">App Version: %1$s</string>
</resources>