<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_main"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="8dp"
        android:paddingEnd="5dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/library"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:alpha="1"
            android:background="@null"
            android:contentDescription="@string/library"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_music_library" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/white" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:alpha=".5"
            android:background="@null"
            android:contentDescription="@string/search"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_search" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/white" />

        <ImageButton
            android:id="@+id/downloads"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:alpha=".5"
            android:background="@null"
            android:contentDescription="@string/downloads"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_download" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>